Separate plot, axes, grid layers. Correct checkbox reactivity. General refactoring.

--- a/plot.html
+++ b/plot.html
@@ -13,8 +13,9 @@
   }
 
   canvas { position: absolute; }
-  #thePlotCanvas { z-index: 2; }
-  #theAxesCanvas { z-index: 1; }
+  #thePlotCanvas { z-index: 3; }
+  #theAxesCanvas { z-index: 2; }
+  #theGridCanvas { z-index: 1; }
   
   </style>
   
@@ -47,6 +48,7 @@
 
 	<canvas id="thePlotCanvas" width="600" height="600" ></canvas>
 	<canvas id="theAxesCanvas" width="600" height="600" ></canvas>
+	<canvas id="theGridCanvas" width="600" height="600" ></canvas>
 
 </div>
 
