--- a/home.html
+++ b/home.html
@@ -30,6 +30,7 @@
 <ul class="navbar">
   <li><a href="home.html">Home</a>
   <li><a href="gasket.html">Sierpinski</a>
+  <li><a href="plot.html">Plot</a>
 </ul>
 
 
